logo + some mobile scale

--- a/src/components/App/index.module.css
+++ b/src/components/App/index.module.css
@@ -4,6 +4,17 @@
   align-items: center;
 }
 
+.logo {
+  background: white;
+  border: 1px solid #573eff;
+  color: #573eff;
+  box-shadow: 3px 3px #573eff;
+  font-size: 20px;
+  padding: 5px 10px;
+  margin-top: 5%;
+  font-weight: 900;
+}
+
 .items {
   width: 100%;
   padding: 0;
