--- a/src/components/App/index.module.css
+++ b/src/components/App/index.module.css
@@ -9,9 +9,9 @@
   border: 1px solid #573eff;
   color: #573eff;
   box-shadow: 3px 3px #573eff;
-  font-size: 20px;
+  font-size: 30px;
   padding: 5px 10px;
-  margin-top: 5%;
+  margin-top: 80px;
   font-weight: 900;
 }
 
