--- a/src/components/Form/index.module.css
+++ b/src/components/Form/index.module.css
@@ -1,8 +1,8 @@
 .submitForm {
-  margin-top: 10%;
+  margin-top: 50px;
   display: flex;
   width: 40%;
-  height: 30px;
+  height: 50px;
 }
 
 .textInput {
@@ -16,7 +16,7 @@
 
 .submitButton {
   width: 15%;
-  height: 100%;
+  height: 92%;
   background: #573eff;
   border: none;
   display: flex;
@@ -32,11 +32,5 @@
 @media only screen and (max-width: 800px) {
   .submitForm {
     width: 90%;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  .searchIcon {
-    width: 10px;
   }
 }
