--- a/src/components/App/index.module.css
+++ b/src/components/App/index.module.css
@@ -1,3 +1,6 @@
+body {
+  background: white;
+}
 .app {
   display: flex;
   flex-direction: column;
@@ -5,7 +8,6 @@
 }
 
 .logo {
-  background: white;
   border: 1px solid #573eff;
   color: #573eff;
   box-shadow: 5px 5px #573eff;
