--- a/src/components/Form/index.module.css
+++ b/src/components/Form/index.module.css
@@ -7,19 +7,12 @@
 
 .textInput {
   width: 80%;
-  outline: none;
-  border: 2px solid #573eff;
-  padding-left: 10px;
-  color: #251a6b;
-}
-
-.textInput {
   background: transparent;
-  width: 80%;
   outline: none;
   border: 2px solid #573eff;
   padding-left: 10px;
   color: #251a6b;
+  font-size: 18px;
 }
 
 .textInputDark {
