useContext api basic usage

--- a/src/components/Form/index.module.css
+++ b/src/components/Form/index.module.css
@@ -11,7 +11,7 @@
   outline: none;
   border: 2px solid #573eff;
   padding-left: 10px;
-  color: #251a6b;
+  color: black;
   font-size: 18px;
 }
 
