--- a/src/components/App/index.module.css
+++ b/src/components/App/index.module.css
@@ -1,10 +1,13 @@
 body {
   background: white;
+  display: flex;
+  justify-content: center;
 }
 .app {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 800px;
 }
 
 .logo {
@@ -23,4 +26,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media only screen and (max-width: 800px) {
+  body {
+    padding: 20px;
+    display: block;
+  }
+  .app {
+    width: 100%;
+  }
 }
