--- a/src/components/AjaxError/index.module.css
+++ b/src/components/AjaxError/index.module.css
@@ -1,7 +1,25 @@
 .ajaxError {
   margin-top: 50px;
-  width: 39%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.basicDescription {
   color: #573eff;
   font-weight: 900;
   font-size: 20px;
+}
+
+.moreInfo {
+  margin-top: 5px;
+  color: #573eff;
+  text-decoration: underline;
+  cursor: pointer;
+  user-select: none;
+}
+
+.error {
+  margin-top: 5px;
+  font-size: 14px;
 }
