--- a/src/components/AjaxTime/index.module.css
+++ b/src/components/AjaxTime/index.module.css
@@ -1,10 +1,8 @@
 .ajaxTime {
   padding: 20px;
-  position: absolute;
-  left: 0;
-  margin-left: 20px;
-  border: 2px solid #573eff;
-  color: #573eff;
+  border: 2px solid white;
+  color: white;
+  margin-bottom: 20px;
 }
 
 .ajaxTimeText {
@@ -17,7 +15,7 @@
   word-wrap: break-word;
 }
 
-@media only screen and (max-width: 620px) {
+/* @media only screen and (max-width: 620px) {
   .ajaxTime {
     padding: 10px;
     font-size: 10px;
@@ -25,4 +23,4 @@
   .ajaxTimeText {
     font-size: 12px;
   }
-}
+} */
