--- a/src/components/Filter/index.module.css
+++ b/src/components/Filter/index.module.css
@@ -2,6 +2,11 @@
   padding: 20px;
   border: 2px solid white;
   color: white;
+  overflow: auto;
+  margin-bottom: 40px;
+}
+.filter::-webkit-scrollbar {
+  display: none;
 }
 
 .list {
